--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
               
                 <hr size="3">
                 
-                    <h2><a href="Games.html"><b>GAMES <em>and</em>  TRADES</b></a></h2> <br>
-                <h2><a href="Contacts.html"><em>Contacts</em> </a></h2></td>
+                    <h2><a href=games.html"><b>GAMES <em>and</em>  TRADES</b></a></h2> <br>
+                <h2><a href="contacts.html"><em>Contacts</em> </a></h2></td>
             </tr>
 
 
